# lie_learn

./: .gitignore  LICENSE  MANIFEST.in  MANYLINUX.md  README.md  broadcasting.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yaml
groups/: SE2.py  SO2.py  SO3.pyx  SO3_tests.py
lie_learn/groups/: SO3.c  SO3.pyx  SO3_tests.py
lie_learn/groups/SO3/: SO3.c  SO3.pyx  __init__.py
lie_learn/probability/: HarmonicDensity.py  S2HarmonicDensity.py  SO3HarmonicDensity.py
lie_learn/representations/SO3/: clebsch_gordan_numerical.py  indexing.py  irrep_bases.c  spherical_harmonics.py  wigner_d.py
lie_learn/spaces/: S2.py  Tn.py  spherical_quadrature.c
lie_learn/spaces/spherical_quadrature/: __init__.py  spherical_quadrature.c  spherical_quadrature.pyx
lie_learn/spaces/tests/: test_S3_quadrature.py  test_spherical_quadrature.py
lie_learn/spectral/: S2FFT_NFFT.py  S2_conv.py  SE2FFT.py  SO3_conv.py  T1FFT.py  T2FFT.py  fourier_interpolation.py
probability/: S1HarmonicDensity.py  S2HarmonicDensity.py
representations/SO3/: clebsch_gordan_numerical.py  irrep_bases.pyx  spherical_harmonics.py  test_SO3_irrep_bases.py  test_spherical_harmonics.py  test_wigner_d.py  wigner_d.py  wigner_d_tests.py
spaces/: S2.py  S3.py  rn.py  spherical_quadrature.pyx
spaces/tests/: test_S3_quadrature.py  test_spherical_quadrature.py
spectral/: FFTBase.py  PolarFFT.py  S2FFT.py  SO3FFT_Naive.py
spectral/tests/: __init__.py  test_S2FFT.py  test_S2FFT_NFFT.py  test_SO3_FFT_Naive.py
tests/spectral/: test_S2FFT_NFFT.py  test_SO3_FFT_Naive.py
(+15 files in other folders)
