[build-system]
requires = [
  'setuptools',
  'setuptools-scm',
  'cython',
  'numpy<2 ; python_version>="3.0"',
  'numpy<1.17 ; python_version<"3.0"',
]
build-backend = "setuptools.build_meta"

[project]
name = "lie_learn"
version = "0.0.2"
description = "A python package that knows how to do various tricky computations related to Lie groups and manifolds (mainly the sphere S2 and rotation group SO3)."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">2.7,!=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*"

classifiers = [
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  'requests',
  'numpy<2 ; python_version>="3.0"',
  'scipy ; python_version>="3.0"',
  'numpy<1.17 ; python_version<"3.0"',
  'scipy<1.3 ; python_version<"3.0"',
  # 'pynfft':  # This installation is complicated. Do it yourself.
]

[project.urls]
'Source Code' = "https://github.com/AMLab-Amsterdam/lie_learn"
